Fixed textareas not getting higher when text is wrapped

--- a/chrome-extension/todo.sass
+++ b/chrome-extension/todo.sass
@@ -340,6 +340,8 @@ body
                 align-items: center
                 flex-shrink: 0
                 transition: opacity $transition, margin $transition, height $transition, transform $transition-short, box-shadow $transition-short
+                &.new-item textarea
+                    user-select: none
                 &.rearranging
                     box-shadow: $shadow-3
                 &.removed
